# homeworks_otus

./: CMakeLists.txt
.github/workflows/: release.yml
homework_1/: .gitignore  CMakeLists.txt  main.cpp  test_version.cpp
